<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_marginBottom="80dp">

    <FrameLayout
        android:id="@+id/FormNotesFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FormNotesFragment">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="-25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/nota1"
                android:textColor="@color/white"
                android:textSize="23dp" />

            <EditText
                android:id="@+id/NotaEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/nota1"
                android:inputType="text"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/FechaEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:hint="@string/fecha"
                android:minHeight="48dp"
                android:minWidth="48dp" />

            <Button
                android:id="@+id/btnEditarrNota"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:backgroundTint="#384fbd"
                android:text="@string/editar"
                android:layout_marginBottom="400dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </LinearLayout>
    </FrameLayout>
</ScrollView>
